--- a/exhibition.html
+++ b/exhibition.html
@@ -29,12 +29,85 @@
         </header>
         <main>
             <section class="piece">
-
+                <div class="txt_box">
+                    <div class="txt-t">
+                        <p>卯</p>
+                    </div>
+                    <div class="txt-b">
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                    </div>
+                </div>
+                <div class="img_box">
+                    <img src="images/piece1.jpg" alt="전시회-토끼">
+                </div>
             </section>
-            <section class="piece"></section>
-            <section class="piece"></section>
-            <section class="piece"></section>
-            <section class="piece"></section>
+            <section class="piece">
+                <div class="txt_box">
+                    <div class="txt-t">
+                        <p>景</p>
+                    </div>
+                    <div class="txt-b">
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                    </div>
+                </div>
+                <div class="img_box">
+                    <img src="images/piece2.jpg" alt="전시회-토끼">
+                </div>
+            </section>
+            <section class="piece">
+                <div class="txt_box">
+                    <div class="txt-t">
+                        <p>花</p>
+                    </div>
+                    <div class="txt-b">
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                    </div>
+                </div>
+                <div class="img_box">
+                    <img src="images/piece3.jpg" alt="전시회-토끼">
+                </div>
+            </section>
+            <section class="piece">
+                <div class="txt_box">
+                    <div class="txt-t">
+                        <p>婚</p>
+                    </div>
+                    <div class="txt-b">
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                    </div>
+                </div>
+                <div class="img_box">
+                    <img src="images/piece4.jpeg" alt="전시회-토끼">
+                </div>
+            </section>
+            <section class="piece">
+                <div class="txt_box">
+                    <div class="txt-t">
+                        <p>梅</p>
+                    </div>
+                    <div class="txt-b">
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                        <p>장생도 10폭 병풍(채용신 작)</p>
+                    </div>
+                </div>
+                <div class="img_box">
+                    <img src="images/piece5.jpeg" alt="전시회-토끼">
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="top-txt">
