--- a/apLAP.html
+++ b/apLAP.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- 내것 -->
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/apLAP.css">
     <link rel="stylesheet" href="css/common.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -27,7 +27,25 @@
                 </nav>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section>
+                <div class="inner">
+                    <h1>apLAP</h1>
+                    <div class="rest_inf">
+                        <h2>휴관공지</h2>
+                        <p>코로나 19의 확산방지 및 이용자분들의<br>
+                        감염예방을 위하여 apLAP은 잠정 휴관합니다.<br>
+                        운영일정 및 자세한 사항에 대해서는<br>
+                        추후 홈페이지 공지를 통해 알려드리겠습니다.
+                        </p>
+                        <p>감사합니다.</p>
+                        <p>문의</p>
+                        <p>tel.02-6040-2345(미술관 안내 데스크)</p>
+                        <p>email.museum@amorepacific.com</p>
+                    </div>
+                </div>
+            </section>
+        </main>
         <footer class="footer">
             <div class="top-txt">
                 <div class="t-l">
