--- a/information.html
+++ b/information.html
@@ -31,17 +31,45 @@
             <section>
                 <div class="inner">
                     <h1>INFORMAITION</h1>
-                    <div class="rest_inf">
-                        <h2>휴관공지</h2>
-                        <p>코로나 19의 확산방지 및 이용자분들의<br>
-                        감염예방을 위하여 apLAP은 잠정 휴관합니다.<br>
-                        운영일정 및 자세한 사항에 대해서는<br>
-                        추후 홈페이지 공지를 통해 알려드리겠습니다.
-                        </p>
-                        <p>감사합니다.</p>
-                        <p>문의</p>
-                        <p>tel.02-6040-2345(미술관 안내 데스크)</p>
-                        <p>email.museum@amorepacific.com</p>
+                    <div class="info">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>공지사항</th>
+                                    <th>날짜</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                                <tr>
+                                    <td>아모레퍼시픽 통합멤버십시스템 DB이전에 따른 WEB서비스 불가안내 </td>
+                                    <td>2023.01.11</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </section>
