--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <!-- 내것 -->
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/shop.css">
     <link rel="stylesheet" href="css/common.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -27,7 +27,14 @@
                 </nav>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section>
+                <div class="inner">
+                    <h1>SHOP</h1>
+                    
+                </div>
+            </section>
+        </main>
         <footer class="footer">
             <div class="top-txt">
                 <div class="t-l">
